EO-618: Allow to set page and tile authorizations + add auth checks
